<resources>
    <string name="app_name">SecureFam</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="login">login</string>
    <string name="email">Email</string>
    <string name="or">Or</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign-Up</string>
    <string name="api_key">AIzaSyB1SG3_1aAifhJGaZyeIMAM1CQVPAhuTV8</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="enter_details">Email ID</string>
    <string name="memberID">Email ID</string>
    <string name="createFamily">Create Family</string>
    <string name="join">Join</string>
    <string name="memberIdHint">Email ID</string>
    <string name="getMemberID">Get Email ID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_user_details">fragment_user_details</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
    <string name="confirm">Confirm</string>
    <string name="clear_current_session">You want to exit SecureFam ?</string>
    <string name="important">Important</string>
    <string name="location_permission_request">"Location access necessary for normal working of the SecureFam. "</string>
    <string name="location_on_request">Switch on location settings for SecureFam.</string>
</resources>
