<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/fragment_user_details"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tf_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tf_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tf_email" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tf_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/first_name"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tf_password" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tf_last_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:hint="@string/last_name"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tf_first_name" />

        <!--        <androidx.appcompat.widget.AppCompatButton-->
        <!--            android:id="@+id/btnCreateFamily"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/textOr"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="@id/textOr"-->
        <!--            android:text="@string/createFamily"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            android:textAllCaps="false"-->
        <!--            android:textSize="10sp"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            app:layout_constraintEnd_toStartOf="@id/btnGetMemberId"-->
        <!--            android:layout_marginBottom="25dp"-->
        <!--            android:textColor="@android:color/black"-->
        <!--            android:layout_marginRight="10dp"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            app:layout_constraintHorizontal_chainStyle="packed"-->
        <!--            android:layout_height="wrap_content"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>